Fix paragraph spacing

--- a/app/assets/stylesheets/_articles.css.scss
+++ b/app/assets/stylesheets/_articles.css.scss
@@ -48,6 +48,8 @@
     text-align: left;
     font-size: 1.8rem;
     font-family: $primary-font; 
+    line-height: 1.75;
+    margin-bottom: 1em;
   }
 
   h2 {
